# subcultron-sim

./: .gitignore  README.md
afish/: CMakeLists.txt  CMakeLists.txt~  package.xml
afish/data/primitives/: primitives_standard.xml
afish/data/robotModel/: afish.urdf~
afish/data/setupScripts/: setup_function_aFish.py  setup_function_aFish.py~
afish/data/simulation/: scene.xml  scene.xml~  simulation_config.bash  simulation_standard.xml
afish/launch/: raw_afish_swim.launch  raw_afish_swim.launch~
afish/msg/: positions.msg
afish/src/: API_test.py  aFish_controller.py  aFish_controller.py~  action_library.py  comm_backup.py  communication.py  communication_raw.py  controller_for_trust_scenario.py
amussel/: CMakeLists.txt  CMakeLists.txt~  README  package.xml  package.xml~
amussel/action/: aMussel.action
amussel/data/dynamics/: amussel1.yaml~  amussel2.yaml~  amussel3.yaml~  amussel4.yaml~  amussel5.yaml~
amussel/data/locations/: locgen.py  locgen.py~  random
amussel/data/mission/: mission_standard.xml
amussel/data/multi_master/: pladypos_novideo.sync
amussel/data/navigation/: navigation_standard.xml~
amussel/data/primitives/: primitives_standard.xml
amussel/data/simulation/: simulation_config.bash  simulation_standard.xml  simulation_standard.xml~  swarm_test.xml  swarm_test.xml~  swarm_test2.xml  swarm_test_raw.xml  swarm_test_raw.xml~  visualization_standard.xml~
amussel/launch/simulation/: amussel_standard_simulation.launch  amussel_standard_simulation.launch~  amussel_standard_simulation_raw.launch
amussel/src/: API_test.py  aMussel_random_generator.py  aMussel_random_generator.py~  aMussel_setup_function.py  action_library.py  action_server.py  controller_for_docking_scenario.py  controller_for_docking_scenario_optimization.py  controller_for_trust_scenario.py  raw_controller.py  scenario_controller.py
apad/: CMakeLists.txt  package.xml
apad/data/control/: control_standard.xml~  controltest.bash~
apad/data/devices/: static_frames.xml~
apad/data/mission/: neptus_ros_comm.xml
apad/data/simulation/: apad.urdf  simulation_config.bash  simulation_standard.xml  simulation_standard.xml~  swarm_test.xml
apad/launch/simulation/: apad_standard_simulation.launch  apad_standard_simulation_raw.launch~
apad/src/: API_test.py  action_client.py  action_library.py  action_server.py  action_server.py~  apad_setup_function.py  controller_for_docking_scenario.py  controller_for_docking_scenario_optimization.py  setup.py  setup_function.py
api/src/api_lib/: anchoring.py  battery.py  induction.py  wifi.py
labust-common-msgs/misc_msgs/: CMakeLists.txt
labust-common-msgs/misc_msgs/srv/: GetChargeInfo.srv  GetTrustInfo.srv
labust-ros-pkg/ident_so/: package.xml
labust-ros-pkg/labust_allocation/: package.xml
labust-ros-pkg/labust_allocation/launch/: allocation_plugin_load.launch
labust-ros-pkg/labust_control/src/: DepthControl.cpp
labust-ros-pkg/labust_diagnostics/: package.xml
labust-ros-pkg/labust_framework/: package.xml
labust-ros-pkg/labust_mission/: CMakeLists.txt  package.xml
labust-ros-pkg/labust_mission/include/labust_mission/: labustMission.hpp  lowLevelConfigure.hpp  maneuverGenerator.hpp  missionExecution.hpp  primitiveManager.hpp  xmlPrinter.hpp  xmlReader.hpp
labust-ros-pkg/labust_mission/src/: mission_exec.cpp  mission_parser.cpp  neptus_parser.cpp
labust-ros-pkg/labust_navigation/: CMakeLists.txt  package.xml
labust-ros-pkg/labust_primitives/: CMakeLists.txt  package.xml
labust-ros-pkg/labust_primitives/include/labust/primitive/: PrimitiveBase.hpp  PrimitiveCall.hpp  PrimitiveCallBase.hpp  primitiveDefinitions.xml
labust-ros-pkg/labust_primitives/src/: course_keeping.cpp  dynamic_positioning.cpp  go2point.cpp
labust-ros-pkg/labust_sim/: CMakeLists.txt
labust-ros-pkg/snippets/: CMakeLists.txt
labust_control/src/: VelocityControl.cpp
labust_control/src/pidtoolkit/: PIFFController.c
labust_sim/: CMakeLists.txt
labust_sim/data/current/: currentInfo.txt
labust_sim/src/environment_sim/: current_sim.py  current_sim_constant.py  environment_sim.py  noise_sim.py  noise_sim_static.py
labust_sim/src/sim_sensors/: BatterySensorSim.cpp  CurrentSensorSim.cpp  CurrentSim.cpp  DockingSim.cpp  PingSim.cpp
labust_sim/src/uvsim/: SimCore.cpp
subcult_multimaster/: CMakeLists.txt  package.xml
subcult_multimaster/launch/: multimaster.launch
subcultron_launch/data/scenario/: scenario_spec.xml
subcultron_launch/src/: aPad_action_client.py  setup.py  setup_config.xml  setup_config_error.xml  uwsim_location_holder.py  uwsim_location_holder_generator.py  zeta_logger.py  zeta_logger_generator.py
(+39 files in other folders)
