<?xml version="1.0"?>
<package>
  <name>labust_diagnostics</name>
  <version>0.1.0</version>
  <description>The labust_diagnostics package and library</description>

  <maintainer email="ivor.rendulic@gmail.com">Ivor Rendulic</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/labust_diagnostics</url> -->
  <author email="ivor.rendulic@gmail.com">Ivor Rendulic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
