<?xml version="1.0"?>
<package>
  <name>labust_framework</name>
  <version>0.1.0</version>
  <description>
      The ROS metapackage for the complete LABUST suite used 
      for vehicle simulation, navigation, guidance and control. 
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/labust_framework</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ident_so</run_depend>
  <run_depend>labust_allocation</run_depend>
  <run_depend>labust_control</run_depend>
  <run_depend>labust_diagnostics</run_depend>
  <run_depend>labust_execution</run_depend>
  <run_depend>labust_mission</run_depend>
  <run_depend>labust_navigation</run_depend>
  <run_depend>labust_primitives</run_depend>
  <run_depend>labust_sim</run_depend>
  <run_depend>snippets</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
