<?xml version="1.0"?>
<package>
	<name>labust_mission</name>
	<version>0.1.0</version>
	<description>The mission execution control nodes and utilities.</description>

	<maintainer email="filip.mandic@fer.hr">Filip Mandic</maintainer>
	<license>BSD</license>
	<!-- <url type="website">http://wiki.ros.org/caddy_state_machine</url> -->
	<author email="filip.mandic@fer.hr">Filip Mandic</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<!--<build_depend>random_numbers</build_depend> -->
	<build_depend>decision_making</build_depend>
	<build_depend>decision_making_parser</build_depend>
	<build_depend>snippets</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>auv_msgs</build_depend>
	<build_depend>misc_msgs</build_depend>
        <build_depend>labust_primitives</build_depend>   

	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<!--<run_depend>random_numbers</run_depend> -->
	<run_depend>decision_making</run_depend>
	<run_depend>decision_making_parser</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>snippets</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>auv_msgs</run_depend>
	<run_depend>misc_msgs</run_depend>
        <run_depend>labust_primitives</run_depend>   

</package>
